# cdk-playground

./: README.md
api/: cdk.json  package-lock.json  package.json
api/functions/go/: go.mod
api/functions/go/cmd/auth/: main.go
api/functions/py/: auth.py  create.py  get.py  pyproject.toml
api/functions/py/lib/: book.py
api/lib/: api-stack.ts
etl/: cdk.json  package-lock.json  package.json
etl/functions/py/: pyproject.toml
etl/lib/: etl-stack.ts
etl/test/: etl.test.ts
inference/: README.md  cdk.json  package-lock.json  package.json
inference/functions/predict/: Dockerfile  predict.py  pyproject.toml
inference/lib/: inference-stack.ts
inference/test/: inference.test.ts
