[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["orshemtov <orshemtovq@gmail.com>"]
readme = "README.md"
packages = [
    { include = "py" },
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
boto3 = "^1.26.155"
boto3-stubs = {extras = ["dynamodb"], version = "^1.26.155"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
