[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["orshemtov <orshemtovq@gmail.com>"]
readme = "README.md"

packages = [
    { include = "py" },
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
